# patchiest

./: .gitignore  Cargo.toml  GEMINI.md  LICENSE.md  README.md  requirements.txt  setup.py
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
patchiest/: __init__.py  __main__.py  patchiest.py
src/: cli.rs  engine.rs  helpers.rs  main.rs  models.rs  registry.rs
src/cli/: tests.rs
src/engine/: tests.rs
src/helpers/: tests.rs
src/models/: tests.rs
src/registry/: tests.rs
tests/: cli_tests.rs  engine_tests.rs
www/: index.html  manifest.json  netlify.toml  style.css  sw.js
