[package]
name = "patchiest"
version = "0.2.0"
edition = "2021"
description = "Patchiest: standalone Rust AST mutation engine backed by ast-grep"
license = "MIT"

[dependencies]
anyhow = "1"
ast-grep-config = "0.41.0"
ast-grep-core = "0.41.0"
ast-grep-language = "0.41.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
